maple-slb-health-check/CH2/maple-ui-slb-hc-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mapleui-prod-hc-ingress
  namespace: maple-prod
spec:
  rules:
  - host: ui-ch2.maple.comcast.net
    http:
      paths:
      - backend:
          serviceName: mapleui-prod-svc
          servicePort: 80
        path: /
